jsonrl/lex.go
//line lex.rl:1
// Copyright (C) 2022 Sneller, Inc.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

// Code generated by ragel. DO NOT EDIT.

package jsonrl

import (
	"errors"
	"fmt"
	"unicode/utf8"
)

//line lex.rl:112

//line lex.rl:124

//line lex.go:37
const object_start int = 1
const object_error int = 0

const object_en_main int = 1

//line lex.rl:127

var ErrNoMatch = errors.New("jsonrl: bad object text")

func parseObject(s *state, data []byte) (int, error) {
	neg, nege, esc := false, false, false
	sbegin, send := 0, 0
	curi, cure, dc := uint64(0), int(0), int(0)
	cs, p, pe, eof := 0, 0, len(data), len(data)
	_ = eof

//line lex.go:55
	{
		cs = object_start
	}

//line lex.go:60
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 1:
			goto st_case_1
		case 0:
			goto st_case_0
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 29:
			goto st_case_29
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 22:
			goto st_case_22
		case 35:
			goto st_case_35
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 36:
			goto st_case_36
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 37:
			goto st_case_37
		}
		goto st_out
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 32:
			goto st1
		case 34:
			goto st2
		case 45:
			goto tr3
		case 91:
			goto tr5
		case 102:
			goto st19
		case 110:
			goto st23
		case 116:
			goto st26
		case 123:
			goto tr9
		}
		switch {
		case data[p] > 13:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr4
			}
		case data[p] >= 9:
			goto st1
		}
		goto st0
	st_case_0:
	st0:
		cs = 0
		goto _out
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
//line lex.rl:59
		esc = false
		sbegin = p
//line lex.rl:59
		send = p
//line lex.go:189
		switch data[p] {
		case 34:
			goto tr11
		case 92:
			goto tr12
		}
		switch {
		case data[p] < 224:
			switch {
			case data[p] > 191:
				if 192 <= data[p] && data[p] <= 223 {
					goto st9
				}
			case data[p] >= 128:
				goto st0
			}
		case data[p] > 239:
			switch {
			case data[p] > 247:
				if 248 <= data[p] {
					goto st0
				}
			case data[p] >= 240:
				goto st14
			}
		default:
			goto st11
		}
		goto st3
	tr21:
//line lex.rl:33
		{
			r, size := utf8.DecodeRune(data[p-2:])
			if size != 2 {
				return p - 2, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st3
	tr29:
//line lex.rl:39
		{
			r, size := utf8.DecodeRune(data[p-3:])
			if size != 3 {
				return p - 3, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st3
	tr38:
//line lex.rl:45
		{
			r, size := utf8.DecodeRune(data[p-4:])
			if size != 4 {
				return p - 4, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line lex.rl:59
		send = p
//line lex.go:253
		switch data[p] {
		case 34:
			goto tr11
		case 92:
			goto tr12
		}
		switch {
		case data[p] < 224:
			switch {
			case data[p] > 191:
				if 192 <= data[p] && data[p] <= 223 {
					goto st9
				}
			case data[p] >= 128:
				goto st0
			}
		case data[p] > 239:
			switch {
			case data[p] > 247:
				if 248 <= data[p] {
					goto st0
				}
			case data[p] >= 240:
				goto st14
			}
		default:
			goto st11
		}
		goto st3
	tr11:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st29
	tr22:
//line lex.rl:33
		{
			r, size := utf8.DecodeRune(data[p-2:])
			if size != 2 {
				return p - 2, fmt.Errorf("bad rune %x", r)
			}
		}
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st29
	tr30:
//line lex.rl:39
		{
			r, size := utf8.DecodeRune(data[p-3:])
			if size != 3 {
				return p - 3, fmt.Errorf("bad rune %x", r)
			}
		}
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st29
	tr39:
//line lex.rl:45
		{
			r, size := utf8.DecodeRune(data[p-4:])
			if size != 4 {
				return p - 4, fmt.Errorf("bad rune %x", r)
			}
		}
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st29
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
//line lex.rl:110
		s.parseString(data[sbegin:send], esc)
//line lex.go:351
		goto st0
	tr12:
//line lex.rl:29
		esc = true
		goto st4
	tr23:
//line lex.rl:33
		{
			r, size := utf8.DecodeRune(data[p-2:])
			if size != 2 {
				return p - 2, fmt.Errorf("bad rune %x", r)
			}
		}
//line lex.rl:29
		esc = true
		goto st4
	tr31:
//line lex.rl:39
		{
			r, size := utf8.DecodeRune(data[p-3:])
			if size != 3 {
				return p - 3, fmt.Errorf("bad rune %x", r)
			}
		}
//line lex.rl:29
		esc = true
		goto st4
	tr40:
//line lex.rl:45
		{
			r, size := utf8.DecodeRune(data[p-4:])
			if size != 4 {
				return p - 4, fmt.Errorf("bad rune %x", r)
			}
		}
//line lex.rl:29
		esc = true
		goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line lex.go:395
		switch data[p] {
		case 34:
			goto st3
		case 47:
			goto st3
		case 92:
			goto st3
		case 102:
			goto st3
		case 110:
			goto st3
		case 114:
			goto st3
		case 117:
			goto st5
		}
		switch {
		case data[p] > 98:
			if 116 <= data[p] && data[p] <= 118 {
				goto st3
			}
		case data[p] >= 97:
			goto st3
		}
		goto st0
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st6
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st6
			}
		default:
			goto st6
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st7
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st7
			}
		default:
			goto st7
		}
		goto st0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st8
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st8
			}
		default:
			goto st8
		}
		goto st0
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st3
			}
		case data[p] > 70:
			if 97 <= data[p] && data[p] <= 102 {
				goto st3
			}
		default:
			goto st3
		}
		goto st0
	tr24:
//line lex.rl:33
		{
			r, size := utf8.DecodeRune(data[p-2:])
			if size != 2 {
				return p - 2, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st9
	tr32:
//line lex.rl:39
		{
			r, size := utf8.DecodeRune(data[p-3:])
			if size != 3 {
				return p - 3, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st9
	tr41:
//line lex.rl:45
		{
			r, size := utf8.DecodeRune(data[p-4:])
			if size != 4 {
				return p - 4, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
//line lex.go:525
		if 128 <= data[p] && data[p] <= 191 {
			goto st10
		}
		goto st0
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
//line lex.rl:59
		send = p
//line lex.go:537
		switch data[p] {
		case 34:
			goto tr22
		case 92:
			goto tr23
		}
		switch {
		case data[p] < 224:
			switch {
			case data[p] > 191:
				if 192 <= data[p] && data[p] <= 223 {
					goto tr24
				}
			case data[p] >= 128:
				goto st0
			}
		case data[p] > 239:
			switch {
			case data[p] > 247:
				if 248 <= data[p] {
					goto st0
				}
			case data[p] >= 240:
				goto tr26
			}
		default:
			goto tr25
		}
		goto tr21
	tr25:
//line lex.rl:33
		{
			r, size := utf8.DecodeRune(data[p-2:])
			if size != 2 {
				return p - 2, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st11
	tr33:
//line lex.rl:39
		{
			r, size := utf8.DecodeRune(data[p-3:])
			if size != 3 {
				return p - 3, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st11
	tr42:
//line lex.rl:45
		{
			r, size := utf8.DecodeRune(data[p-4:])
			if size != 4 {
				return p - 4, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st11
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
//line lex.go:599
		if 128 <= data[p] && data[p] <= 191 {
			goto st12
		}
		goto st0
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		if 128 <= data[p] && data[p] <= 191 {
			goto st13
		}
		goto st0
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line lex.rl:59
		send = p
//line lex.go:620
		switch data[p] {
		case 34:
			goto tr30
		case 92:
			goto tr31
		}
		switch {
		case data[p] < 224:
			switch {
			case data[p] > 191:
				if 192 <= data[p] && data[p] <= 223 {
					goto tr32
				}
			case data[p] >= 128:
				goto st0
			}
		case data[p] > 239:
			switch {
			case data[p] > 247:
				if 248 <= data[p] {
					goto st0
				}
			case data[p] >= 240:
				goto tr34
			}
		default:
			goto tr33
		}
		goto tr29
	tr26:
//line lex.rl:33
		{
			r, size := utf8.DecodeRune(data[p-2:])
			if size != 2 {
				return p - 2, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st14
	tr34:
//line lex.rl:39
		{
			r, size := utf8.DecodeRune(data[p-3:])
			if size != 3 {
				return p - 3, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st14
	tr43:
//line lex.rl:45
		{
			r, size := utf8.DecodeRune(data[p-4:])
			if size != 4 {
				return p - 4, fmt.Errorf("bad rune %x", r)
			}
		}
		goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
//line lex.go:682
		if 128 <= data[p] && data[p] <= 191 {
			goto st15
		}
		goto st0
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		if 128 <= data[p] && data[p] <= 191 {
			goto st16
		}
		goto st0
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		if 128 <= data[p] && data[p] <= 191 {
			goto st17
		}
		goto st0
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line lex.rl:59
		send = p
//line lex.go:712
		switch data[p] {
		case 34:
			goto tr39
		case 92:
			goto tr40
		}
		switch {
		case data[p] < 224:
			switch {
			case data[p] > 191:
				if 192 <= data[p] && data[p] <= 223 {
					goto tr41
				}
			case data[p] >= 128:
				goto st0
			}
		case data[p] > 239:
			switch {
			case data[p] > 247:
				if 248 <= data[p] {
					goto st0
				}
			case data[p] >= 240:
				goto tr43
			}
		default:
			goto tr42
		}
		goto tr38
	tr3:
//line lex.rl:84
		neg = true
//line lex.rl:62
		neg = false
//line lex.rl:62
		neg = true
		goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
//line lex.go:755
		if 48 <= data[p] && data[p] <= 57 {
			goto tr44
		}
		goto st0
	tr4:
//line lex.rl:61
		curi *= 10
		curi += uint64(data[p] - '0')
//line lex.rl:62
		neg = false
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st30
	tr44:
//line lex.rl:61
		curi *= 10
		curi += uint64(data[p] - '0')
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st30
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
//line lex.go:791
		if data[p] == 46 {
			goto tr55
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr44
		}
		goto st0
	tr55:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st31
	tr56:
//line lex.rl:72
		curi *= 10
		curi += uint64(data[p] - '0')
		dc--
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st31
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
//line lex.go:826
		switch data[p] {
		case 69:
			goto tr57
		case 101:
			goto tr57
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr56
		}
		goto st0
	tr57:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st32
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
//line lex.go:852
		switch data[p] {
		case 43:
			goto tr58
		case 45:
			goto tr59
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr60
		}
		goto st0
	tr58:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st33
	tr59:
//line lex.rl:74
		nege = true
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st33
	tr60:
//line lex.rl:74
		cure *= 10
		cure += int(data[p]) - '0'
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st33
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
//line lex.go:902
		if 48 <= data[p] && data[p] <= 57 {
			goto tr60
		}
		goto st0
	tr5:
//line lex.rl:101
		{
			p++ // skip '['
			npe, err := parseList(s, data[p:])
			p += npe
			if err != nil {
				return p, err
			}
			// will automatically advance past ']'
		}
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st34
	tr9:
//line lex.rl:92
		{
			p++ // skip '{'
			npe, err := parseRecord(s, data[p:])
			p += npe // skip struct body
			if err != nil {
				return p, err
			}
			// will automatically advance past '}'
		}
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st34
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
//line lex.go:952
		goto st0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		if data[p] == 97 {
			goto st20
		}
		goto st0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		if data[p] == 108 {
			goto st21
		}
		goto st0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		if data[p] == 115 {
			goto st22
		}
		goto st0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		if data[p] == 101 {
			goto tr48
		}
		goto st0
	tr48:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st35
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
//line lex.go:1005
		goto st0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		if data[p] == 117 {
			goto st24
		}
		goto st0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		if data[p] == 108 {
			goto st25
		}
		goto st0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		if data[p] == 108 {
			goto tr51
		}
		goto st0
	tr51:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st36
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
//line lex.go:1049
		goto st0
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		if data[p] == 114 {
			goto st27
		}
		goto st0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		if data[p] == 117 {
			goto st28
		}
		goto st0
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		if data[p] == 101 {
			goto tr54
		}
		goto st0
	tr54:
//line lex.rl:117
		{
			// since this is the 'final' state,
			// advance the character pointer
			// so that it points past the final char
			// (i.e. return the # of characters consumed)
			return p + 1, nil
		}
		goto st37
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
//line lex.go:1093
		goto st0
	st_out:
	_test_eof1:
		cs = 1
		goto _test_eof
	_test_eof2:
		cs = 2
		goto _test_eof
	_test_eof3:
		cs = 3
		goto _test_eof
	_test_eof29:
		cs = 29
		goto _test_eof
	_test_eof4:
		cs = 4
		goto _test_eof
	_test_eof5:
		cs = 5
		goto _test_eof
	_test_eof6:
		cs = 6
		goto _test_eof
	_test_eof7:
		cs = 7
		goto _test_eof
	_test_eof8:
		cs = 8
		goto _test_eof
	_test_eof9:
		cs = 9
		goto _test_eof
	_test_eof10:
		cs = 10
		goto _test_eof
	_test_eof11:
		cs = 11
		goto _test_eof
	_test_eof12:
		cs = 12
		goto _test_eof
	_test_eof13:
		cs = 13
		goto _test_eof
	_test_eof14:
		cs = 14
		goto _test_eof
	_test_eof15:
		cs = 15
		goto _test_eof
	_test_eof16:
		cs = 16
		goto _test_eof
	_test_eof17:
		cs = 17
		goto _test_eof
	_test_eof18:
		cs = 18
		goto _test_eof
	_test_eof30:
		cs = 30
		goto _test_eof
	_test_eof31:
		cs = 31
		goto _test_eof
	_test_eof32:
		cs = 32
		goto _test_eof
	_test_eof33:
		cs = 33
		goto _test_eof
	_test_eof34:
		cs = 34
		goto _test_eof
	_test_eof19:
		cs = 19
		goto _test_eof
	_test_eof20:
		cs = 20
		goto _test_eof
	_test_eof21:
		cs = 21
		goto _test_eof
	_test_eof22:
		cs = 22
		goto _test_eof
	_test_eof35:
		cs = 35
		goto _test_eof
	_test_eof23:
		cs = 23
		goto _test_eof
	_test_eof24:
		cs = 24
		goto _test_eof
	_test_eof25:
		cs = 25
		goto _test_eof
	_test_eof36:
		cs = 36
		goto _test_eof
	_test_eof26:
		cs = 26
		goto _test_eof
	_test_eof27:
		cs = 27
		goto _test_eof
	_test_eof28:
		cs = 28
		goto _test_eof
	_test_eof37:
		cs = 37
		goto _test_eof

	_test_eof:
		{
		}
		if p == eof {
			switch cs {
			case 30:
//line lex.rl:62
				{
					i := int64(curi)
					/* FIXME: what if this integer is out of range? */
					if neg {
						i = -i
					}
					s.parseInt(i)
					curi = 0
				}
			case 31:
//line lex.rl:84

				atof(s, curi, dc, neg)
				curi = 0
				dc = 0
				cure = 0
				neg = false
				nege = false

			case 36:
//line lex.rl:89
				s.parseNull()
			case 37:
//line lex.rl:90
				s.parseBool(true)
			case 35:
//line lex.rl:91
				s.parseBool(false)
			case 32, 33:
//line lex.rl:74

				if nege {
					cure = -cure
				}
				dc += cure

//line lex.rl:84

				atof(s, curi, dc, neg)
				curi = 0
				dc = 0
				cure = 0
				neg = false
				nege = false

//line lex.go:1175
			}
		}

	_out:
		{
		}
	}

//line lex.rl:139

	return p, fmt.Errorf("parseObject: position %d of %d: %w", p, pe, ErrNoMatch)
}

//line lex.rl:152

//line lex.go:1192
const recfields_start int = 1
const recfields_error int = 0

const recfields_en_main int = 1

//line lex.rl:155

func parseRecord(s *state, data []byte) (int, error) {
	neg, nege, esc := false, false, false
	sbegin, send := 0, 0
	curi, cure, dc := uint64(0), int(0), int(0)
	s.beginRecord()
	cs, p, pe, eof := 0, 0, len(data), len(data)
	_ = eof

//line lex.go:1209
	{
		cs = recfields_start
	}
